<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nestedScrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@android:color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <EditText
            android:id="@+id/nazivET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:hint="@string/naziv"
            android:inputType="text" />

        <EditText
            android:id="@+id/porodicaET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:hint="@string/pporodica"
            android:inputType="text" />

        <EditText
            android:id="@+id/medicinskoUpozorenjeET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:hint="@string/medicinsko_upozorenje"
            android:inputType="text" />

        <EditText
            android:id="@+id/jeloET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:hint="@string/jelo"
            android:inputType="text"/>

        <TextView
            android:id="@+id/medicinskaKoristTxt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="10dp"
            android:textSize="18sp"
            android:text="@string/medicinske_koristi"/>

        <ListView
            android:id="@+id/medicinskaKoristLV"
            android:layout_width="match_parent"
            android:layout_height="315dp" />

        <TextView
            android:id="@+id/klimatskiTipTxt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="10dp"
            android:textSize="18sp"
            android:text="@string/klimatski_tipovi"/>

        <ListView
            android:id="@+id/klimatskiTipLV"
            android:layout_width="match_parent"
            android:layout_height="315dp" />

        <TextView
            android:id="@+id/zemljisniTipTxt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="10dp"
            android:textSize="18sp"
            android:text="@string/zemljisni_tipovi"/>

        <ListView
            android:id="@+id/zemljisniTipLV"
            android:layout_width="match_parent"
            android:layout_height="315dp" />

        <TextView
            android:id="@+id/profilOkusaTxt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="10dp"
            android:textSize="18sp"
            android:text="@string/profil_okusaa"/>

        <ListView
            android:id="@+id/profilOkusaLV"
            android:layout_width="match_parent"
            android:layout_height="415dp" />

        <TextView
            android:id="@+id/jelaTxt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="10dp"
            android:textSize="18sp"
            android:text="@string/jela"/>

        <ListView
            android:id="@+id/jelaLV"
            android:layout_width="match_parent"
            android:layout_height="100dp" />

        <ImageView
            android:id="@+id/slikaIV"
            android:layout_width="170dp"
            android:layout_height="200dp"
            android:layout_marginBottom="15dp"
            android:layout_gravity="center"
            android:src="@drawable/picture1"
            android:contentDescription="@string/slika_biljke" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal"
            style="?android:attr/buttonBarStyle">

            <Button
                android:id="@+id/dodajJeloBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="3dp"
                android:backgroundTint="#203618"
                android:textColor="@android:color/white"
                android:text="@string/dodaj_jelo"
                style="?android:attr/buttonBarButtonStyle" />

            <Button
                android:id="@+id/dodajBiljkuBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginStart="3dp"
                android:layout_marginEnd="3dp"
                android:backgroundTint="#203618"
                android:textColor="@android:color/white"
                android:text="@string/dodaj_biljku"
                style="?android:attr/buttonBarButtonStyle" />

            <Button
                android:id="@+id/uslikajBiljkuBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginStart="3dp"
                android:layout_marginEnd="10dp"
                android:backgroundTint="#203618"
                android:textColor="@android:color/white"
                android:text="@string/uslikaj_biljku"
                style="?android:attr/buttonBarButtonStyle" />

        </LinearLayout>

    </LinearLayout>
</androidx.core.widget.NestedScrollView>