...
        android:layout_height="48dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="5dp"
        android:popupBackground="@android:color/white"
        app:layout_constraintBaseline_toBaselineOf="@id/resetBtn"
        app:layout_constraintBottom_toTopOf="@+id/biljkeRV"
        app:layout_constraintEnd_toStartOf="@+id/resetBtn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.099" />

    <Button
...
        android:layout_marginTop="10dp"
        android:layout_marginEnd="5dp"
        android:backgroundTint="#203618"
        android:text="@string/reset"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toTopOf="@+id/biljkeRV"
        app:layout_constraintEnd_toStartOf="@id/novaBiljkaBtn"
        app:layout_constraintStart_toEndOf="@+id/modSpinner"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.102" />

    <Button
        android:id="@+id/novaBiljkaBtn"
...
